[gd_scene load_steps=7 format=3 uid="uid://b8vv8t0n2s842"]

[ext_resource type="Texture2D" uid="uid://c1b2ql3rndt3r" path="res://Data/Textures/UI/UI1.png" id="1_ars55"]
[ext_resource type="PackedScene" uid="uid://cjn2gofp0rfbg" path="res://Source/UI/Inventory/Slot.tscn" id="2_jcb6m"]
[ext_resource type="Script" path="res://Source/UI/Inventory/Bag.gd" id="2_xsj6a"]
[ext_resource type="Script" path="res://Source/UI/Inventory/CharacterPage.gd" id="4_lxfe6"]
[ext_resource type="Texture2D" uid="uid://bwruqepts3mqh" path="res://Data/Textures/Items/Item1.png" id="4_mtcxk"]
[ext_resource type="Script" path="res://Source/UI/Inventory/Chest.gd" id="5_wv4pp"]

[node name="Inventory" type="Control"]
custom_minimum_size = Vector2(398, 311)
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -540.0
offset_bottom = 540.0
grow_horizontal = 0
grow_vertical = 2

[node name="bag" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -398.0
offset_top = -155.5
offset_bottom = 155.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("2_xsj6a")

[node name="nine_patch_rect" type="NinePatchRect" parent="bag"]
layout_mode = 0
offset_right = 398.0
offset_bottom = 367.0
texture = ExtResource("1_ars55")
region_rect = Rect2(290, 674, 92, 124)

[node name="grid_container" type="GridContainer" parent="bag/nine_patch_rect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -70.0
offset_right = 88.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="slot_1" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_2" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_3" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_4" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_5" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_6" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_7" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_8" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_9" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_10" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_11" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_12" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_13" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_14" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_15" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_16" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_17" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_18" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_19" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="slot_20" parent="bag/nine_patch_rect/grid_container" instance=ExtResource("2_jcb6m")]
layout_mode = 2

[node name="currency" type="Sprite2D" parent="bag"]
position = Vector2(85, 26.5)
texture = ExtResource("4_mtcxk")
region_enabled = true
region_rect = Rect2(227, 389, 26, 23)

[node name="currency_description_l" type="Label" parent="bag/currency"]
offset_left = 18.0
offset_top = -15.0
offset_right = 67.0
offset_bottom = 11.0
text = "Shuan"

[node name="currency_value_l" type="Label" parent="bag/currency"]
offset_left = -63.0
offset_top = -13.0
offset_right = -23.0
offset_bottom = 13.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="character_page" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(260, 350)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -175.0
offset_right = 260.0
offset_bottom = 175.0
grow_vertical = 2
script = ExtResource("4_lxfe6")

[node name="nine_patch_rect" type="NinePatchRect" parent="character_page"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 350.0
texture = ExtResource("1_ars55")
region_rect = Rect2(737, 834, 92, 124)

[node name="slot_1" parent="character_page/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 100.0
offset_top = 264.0
offset_right = 164.0
offset_bottom = 328.0

[node name="slot_2" parent="character_page/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 8.0
offset_top = 86.0
offset_right = 72.0
offset_bottom = 150.0

[node name="slot_3" parent="character_page/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 170.0
offset_top = 102.0
offset_right = 234.0
offset_bottom = 166.0

[node name="slot_4" parent="character_page/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 172.0
offset_top = 188.0
offset_right = 236.0
offset_bottom = 252.0

[node name="chest" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -64.0
offset_right = 192.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_wv4pp")

[node name="nine_patch_rect" type="NinePatchRect" parent="chest"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 192.0
texture = ExtResource("1_ars55")
region_rect = Rect2(290, 674, 92, 124)

[node name="slot_1" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 32.0
offset_top = 23.0
offset_right = 96.0
offset_bottom = 87.0

[node name="slot_2" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 96.0
offset_top = 23.0
offset_right = 160.0
offset_bottom = 87.0

[node name="slot_3" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 160.0
offset_top = 23.0
offset_right = 224.0
offset_bottom = 87.0

[node name="slot_4" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 225.0
offset_top = 23.0
offset_right = 289.0
offset_bottom = 87.0

[node name="slot_5" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 32.0
offset_top = 94.0
offset_right = 96.0
offset_bottom = 158.0

[node name="slot_6" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 96.0
offset_top = 94.0
offset_right = 160.0
offset_bottom = 158.0

[node name="slot_7" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 160.0
offset_top = 94.0
offset_right = 224.0
offset_bottom = 158.0

[node name="slot_8" parent="chest/nine_patch_rect" instance=ExtResource("2_jcb6m")]
layout_mode = 0
offset_left = 224.0
offset_top = 94.0
offset_right = 288.0
offset_bottom = 158.0

[node name="exit_button_background" type="ColorRect" parent="chest"]
layout_mode = 0
offset_left = 280.0
offset_top = -39.0
offset_right = 320.0
offset_bottom = 1.0
color = Color(1, 0.321569, 0.2, 0.478431)

[node name="exit_b" type="Button" parent="chest/exit_button_background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "X"
flat = true

[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_1" to="bag" method="onSlot1MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_1" to="bag" method="onSlot1MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_2" to="bag" method="onSlot2MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_2" to="bag" method="onSlot2MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_3" to="bag" method="onSlot3MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_3" to="bag" method="onSlot3MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_4" to="bag" method="onSlot4MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_4" to="bag" method="onSlot4MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_5" to="bag" method="onSlot5MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_5" to="bag" method="onSlot5MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_6" to="bag" method="onSlot6MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_6" to="bag" method="onSlot6MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_7" to="bag" method="onSlot7MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_7" to="bag" method="onSlot7MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_8" to="bag" method="onSlot8MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_8" to="bag" method="onSlot8MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_9" to="bag" method="onSlot9MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_9" to="bag" method="onSlot9MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_10" to="bag" method="onSlot10MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_10" to="bag" method="onSlot10MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_11" to="bag" method="onSlot11MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_11" to="bag" method="onSlot11MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_12" to="bag" method="onSlot12MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_12" to="bag" method="onSlot12MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_13" to="bag" method="onSlot13MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_13" to="bag" method="onSlot13MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_14" to="bag" method="onSlot14MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_14" to="bag" method="onSlot14MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_15" to="bag" method="onSlot15MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_15" to="bag" method="onSlot15MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_16" to="bag" method="onSlot16MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_16" to="bag" method="onSlot16MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_17" to="bag" method="onSlot17MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_17" to="bag" method="onSlot17MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_18" to="bag" method="onSlot18MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_18" to="bag" method="onSlot18MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_19" to="bag" method="onSlot19MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_19" to="bag" method="onSlot19MouseExited"]
[connection signal="mouse_entered" from="bag/nine_patch_rect/grid_container/slot_20" to="bag" method="onSlot20MouseEntered"]
[connection signal="mouse_exited" from="bag/nine_patch_rect/grid_container/slot_20" to="bag" method="onSlot20MouseExited"]
[connection signal="mouse_entered" from="character_page/nine_patch_rect/slot_1" to="character_page" method="onWeaponSlotMouseEntered"]
[connection signal="mouse_exited" from="character_page/nine_patch_rect/slot_1" to="character_page" method="onWeaponSlotMouseExited"]
[connection signal="mouse_entered" from="character_page/nine_patch_rect/slot_2" to="character_page" method="onBodySlotMouseEntered"]
[connection signal="mouse_exited" from="character_page/nine_patch_rect/slot_2" to="character_page" method="onBodySlotMouseExited"]
[connection signal="mouse_entered" from="character_page/nine_patch_rect/slot_3" to="character_page" method="onPantsSlotMouseEntered"]
[connection signal="mouse_exited" from="character_page/nine_patch_rect/slot_3" to="character_page" method="onPantsSlotMouseExited"]
[connection signal="mouse_entered" from="character_page/nine_patch_rect/slot_4" to="character_page" method="onNecklaceSlotMouseEntered"]
[connection signal="mouse_exited" from="character_page/nine_patch_rect/slot_4" to="character_page" method="onNecklaceSlotMouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_1" to="chest" method="onSlot1MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_1" to="chest" method="onSlot1MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_2" to="chest" method="onSlot2MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_2" to="chest" method="onSlot2MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_3" to="chest" method="onSlot3MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_3" to="chest" method="onSlot3MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_4" to="chest" method="onSlot4MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_4" to="chest" method="onSlot4MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_5" to="chest" method="onSlot5MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_5" to="chest" method="onSlot5MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_6" to="chest" method="onSlot6MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_6" to="chest" method="onSlot6MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_7" to="chest" method="onSlot7MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_7" to="chest" method="onSlot7MouseExited"]
[connection signal="mouse_entered" from="chest/nine_patch_rect/slot_8" to="chest" method="onSlot8MouseEntered"]
[connection signal="mouse_exited" from="chest/nine_patch_rect/slot_8" to="chest" method="onSlot8MouseExited"]
[connection signal="pressed" from="chest/exit_button_background/exit_b" to="chest" method="onExitBPressed"]
